--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -164,10 +164,12 @@ ul li {
 	vertical-align: middle;
 }
 .row{
-	/* display: flex;
+ /* display: flex;
 	flex-wrap:wrap;
 	align-items: center; */
-}
+
+	margin:0px 15px;
+} 
 .navbar {
 	display:flex;
     margin-bottom: 0;
@@ -370,7 +372,7 @@ input:-webkit-autofill:focus {
 #scrollUp:hover {
 	background:#353535;
 }
-/*
+
 .box-bg{
 	background-repeat: repeat;
 	background-attachment: inherit;
@@ -405,7 +407,7 @@ input:-webkit-autofill:focus {
 .boxed-layout .testimonials .owl-controls .owl-nav .owl-next {
 	right: -50px;
 }
-*/
+
 /*=======================
   02. Header CSS
 =========================*/ 
@@ -469,9 +471,11 @@ input:-webkit-autofill:focus {
 .header .topbar .contact li a{
 	color: #fff;
 }
-.container .row{
+.header > .container:first-child .row{
 	display:flex;
-	justify-content: space-around;}
+	justify-content: space-around;
+}
+
 /* Social */
 .header .topbar .social {
 	top: 0px;
@@ -491,7 +495,8 @@ input:-webkit-autofill:focus {
 	float: left;
 	position: relative;
 	padding-left: 40px;
-	margin-right: 30px;
+	margin-right: 50px;
+	
 }
 .header .single-widget:last-child{
 	margin:0;
@@ -508,7 +513,7 @@ input:-webkit-autofill:focus {
 }
 .header .single-widget h4 {
 	margin-bottom: 2px;
-	font-size: 14px;
+	font-size: 16px;
 	text-transform: initial;
 	color: #353535;
 	font-weight: 500;
@@ -526,11 +531,11 @@ input:-webkit-autofill:focus {
 }
 .header .mainmenu {
 	float: left;
-	width: 100%;
+	/* width: 100%; */
 }
 .header .nav li {
 	position: relative;
-	margin-right: 5px;
+	margin-right: 0px;
 }
 .header .nav li:last-child{
 	margin:0;
@@ -803,15 +808,15 @@ input:-webkit-autofill:focus {
 	display: flex;
 	align-items: center;
 } */
-.header-inner .col-xs-12{
-	display: flex;
-	justify-content: space-around;
-}
 .header-inner  .nav-area{
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	align-items: center;
 }
+.header  .container:nth-child(2) .row{
+	display: flex;
+	justify-content: center;
+	}
 .header-inner .nav-area .social{
 	display:flex;
 	align-items: center;
@@ -1051,19 +1056,27 @@ input:-webkit-autofill:focus {
 =========================*/ 
 .hero-area{
 	position: relative;	
-	height: 580px;
+	height: 680px;
 	overflow:hidden;
+}
+.hero-area .slider-one:first-child{
+	position:relative;
+	top:-50px;
+	background-image: url("./../images/slider/slider-bg1.jpg");
+	background-position-x: right;
+	background-position-y:top;
+	 background-repeat: no-repeat;
+	background-size:100% ;  
+	width:100%;
 }
 .hero-area .single-slider {
 	background-size:cover;
-	background-position:center;
 	background-repeat:no-repeat;
-	height: 580px;
+	height: 680px;
 	position: relative;
-	position:relative;
 }
 .hero-area .slide-text {
-	text-align: left;
+	text-align: justify;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -1076,6 +1089,8 @@ input:-webkit-autofill:focus {
 	justify-content: center;
 	width: 100%;
 	height: 580px;
+	position: relative;
+	left:13%;
 }
 .hero-area .slide-text h1 {
 	font-size: 55px;
@@ -1086,6 +1101,11 @@ input:-webkit-autofill:focus {
 	position: relative;
 	padding-bottom: 20px;
 	line-height: 60px;
+}
+.hero-area .slide-text p{
+	width:600px;
+	display: flex;
+	flex-wrap: wrap;
 }
 .hero-area .slide-text h1 .short {
 	font-size: 30px;
@@ -1206,7 +1226,7 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	-moz-transform: perspective(600px) rotateY(90deg);
 	transform: perspective(600px) rotateY(90deg);
 	border-radius:0 3px 3px 0;
-	visibility:hidden;
+	/* visibility:hidden; */
 	opacity:0;
 }
 .hero-area:hover .owl-controls .owl-nav .owl-prev{
@@ -1225,7 +1245,7 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	-moz-transform: perspective(600px) rotateY(-90deg);
 	transform: perspective(600px) rotateY(-90deg);
 	border-radius:3px 0 0 3px;
-	visibility:hidden;
+	/* visibility:hidden; */
 	opacity:0;
 }
 .hero-area:hover .owl-controls .owl-nav .owl-next{
@@ -1409,6 +1429,11 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 /*=======================
   04. Features CSS
 =========================*/
+.features .container .row{
+	display: flex;
+	/* justify-content: center; */
+	/* align-items: center; */
+}
 .features .features-single {
 	padding: 40px 30px;
 	text-align: center;
@@ -1435,6 +1460,7 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 }
 .features .features-single p{
 	color:#fff;
+	text-align: center;
 }
 /*=======================
   End Features CSS
@@ -1446,16 +1472,29 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 .services{
 	background:#f6f6f6;
 }
-.services .single-services {
+.services .container .row:nth-child(2) {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+.services .container .row:nth-child(2).col-xs-12{
+	width:300px;
+}
+.services  .single-services {
 	background: #fff;
-	padding: 40px 20px 40px 72px;
+	/* padding: 40px 20px 40px 72px; */
+	padding:20px;
 	position: relative;
 	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.30);
 	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.30);
-	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.30);
+	box-shadow: 0px 0px 4px rgba(15, 13, 13, 0.3);
 	margin-top: 30px;
 	text-align: left;
 	overflow: hidden;
+	margin:10px 10px;
+	margin-top:30px;
+	width:330px;
 }
 .services .single-services:before{
 	position:absolute;
@@ -1511,7 +1550,9 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 .services .single-services h2 a{
 	color:#353535;
 }
-
+.services .single-services p{
+	margin-top: 50px;
+}
 /* Services Sidebar */
 .services .single-sidebar {
 	background: #fff;
@@ -1725,10 +1766,24 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	background:#353535;
 	padding: 0;
 	overflow: hidden;
+	height:auto;
 }
 .why-choose .fix{
 	padding:0;
 	margin:0;
+}
+.why-choose .container-fluid .row{
+	display: flex;
+	height: 460px;
+}
+.why-choose .container-fluid .row .col-xs-12:first-child {
+	width:30%;
+}
+.why-choose .container-fluid .row .col-xs-12:nth-child(2){
+	width:40%;
+}
+.why-choose .container-fluid .row .col-xs-12:nth-child(3){
+	width:30%;
 }
 .why-choose .working-process {
 	width: 100%;
@@ -1760,7 +1815,8 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	margin-bottom: 30px;
 	border-radius: 5px;
 	text-align: left;
-	padding: 0 0px 0px 85px;
+	padding: 0 0px 0px 55px;
+	display: flex;
 }
 .why-choose .single-choose:last-child{
 	margin:0;
@@ -1779,8 +1835,9 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	-webkit-transition: all 0.4s ease;
 	-moz-transition: all 0.4s ease;
 	transition: all 0.4s ease;
-	position: absolute;
-	left: 0;
+	/* position: absolute; */
+	color:#ed1c24;
+	margin-right:20px;
 }
 .why-choose .single-choose i::after {
 	position: absolute;
@@ -1795,9 +1852,13 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	margin: 0 0 10px;
 	font-size: 18px;
 	color: #fff;
+	margin-left: 5px;
 }
 .why-choose .single-choose p{
+	display: flex;
+	flex-wrap: wrap;
 	color:#bbb;
+	margin-left:5px;
 }
 .why-choose .why-video {
 	background: url("http://via.placeholder.com/800x720");
@@ -1833,8 +1894,8 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	border-radius: 100%;
 	-webkit-animation: waves 3s ease-in-out infinite;
 	animation: waves 3s ease-in-out infinite;
-	left: 50%;
-	margin-left: -150px;
+	right:5%;
+	/* margin-left: -50px; */
 	top: 50%;
 	margin-top: -150px;
 }
@@ -1853,7 +1914,7 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 .why-choose .why-video .video a {
 	position: absolute;
 	top: 50%;
-	left: 50%;
+	right: 12%;
 	width: 70px;
 	height: 70px;
 	text-align: center;
@@ -2247,8 +2308,15 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	background: #fff;
 	position: relative;
 }
+.team  .row:nth-child(2)  .col-xs-12{
+	width:20%;
+}
+.team .container .row:nth-child(2){
+	display: flex;
+}
 .team .single-team {
 	background: #fff;
+	width:30%;
 	-webkit-transition:all 0.4s ease;
 	-moz-transition:all 0.4s ease;
 	transition:all 0.4s ease;
@@ -2256,6 +2324,9 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.30);
 	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.30);
 	margin-top:30px;
+}
+.team .default{
+	width:25%;
 }
 .team .t-head{
 	position:relative;
@@ -2265,7 +2336,7 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
+	/* width: 20%; */
 	height: 100%;
 	background: #fff;
 	opacity:0;
@@ -2280,8 +2351,15 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	visibility:visible;
 	opacity:0.3;
 }
-.team .t-head img{
+/* .col-xs-12 > .t-head{
+	width:15%;
+} */
+.team .default{
+	margin:20px;
+}
+.team .t-head .default img{
 	width:100%;
+	height:100%;
 	position:relative;
 }
 .team .t-social {
@@ -2935,11 +3013,14 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	margin-top: 30px;
 	background: #fff;
 	padding: 10px;
+	width:30%;
 }
 .blog-main .single-blog .blog-head{
 	position: relative;
 	overflow: hidden;
 	z-index: 5;
+	width:30%;
+	display:flex;
 }
 .blog-main .single-blog .blog-head img{
 	width:100%;
@@ -4519,7 +4600,12 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	background-size: auto auto !important;
 }
 .footer .footer-top .single-widget{
+	display: flex;
+	flex-wrap: wrap;
 	margin-top:30px;
+}
+.footer .footer-top .container .row{
+display: flex;
 }
 .footer .footer-top h2 {
 	color: #353535;
@@ -4669,6 +4755,7 @@ filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 .footer.dark .single-tweet span{
 	color:#ddd;
 }
+
 .footer.dark .address .list li a{
 	color:#ddd;
 }
