--- a/frontend/src/css/responsive.css
+++ b/frontend/src/css/responsive.css
@@ -6,6 +6,9 @@ Version:	1.1
 ========================================*/   
 
 /* Tablet Layout */
+@media (min-width:991px) and (max-width:1130px){
+	
+}
 @media (min-width: 768px) and (max-width: 991px) {
 .section-title {
 	padding: 0 90px;
